services/service-grafana.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
  labels: 
    app: grafana
spec:
  selector:
    app: grafana
  type: NodePort
  ports:
    - port: 3000
      protocol: TCP
      nodePort: 30104
