services/strategies-recreate.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-rct
  labels:
    app: my-app-rct
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: http
    nodePort: 32062
  selector:
    app: my-app-rct
