services/ingress-prom-graf.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
spec:
  tls:
  - hosts:
    - prometheus.opencloud.amx.com
    - grafana.opencloud.amx.com
    secretName: prom-secret
  rules:
  - host: prometheus.opencloud.amx.com
    http:
      paths:
      - backend:
          serviceName: prometheus-service
          servicePort: 8080
  - host: grafana.opencloud.amx.com
    http:
      paths:
      - backend:
          serviceName: grafana-service
          servicePort: 3000
